--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "@react-email/components": "^0.1.1",
     "@tabler/icons-react": "^3.34.0",
     "@tanstack/react-table": "^8.21.3",
+    "@vercel/speed-insights": "^1.2.0",
     "better-auth": "^1.2.10",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
