--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "next-themes": "^0.4.6",
     "nodemailer": "^7.0.4",
     "pg": "^8.16.2",
+    "pnpm": "^10.12.4",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-hook-form": "^7.58.1",
