--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
     "recharts": "^3.0.0",
     "resend": "^4.6.0",
     "sonner": "^2.0.5",
+    "swr": "^2.3.3",
     "tailwind-merge": "^3.3.1",
     "vaul": "^1.1.2",
     "zod": "^3.25.67"
